# cubeviz

./: .gitignore  .gitmodules  .rtd-environment.yml  .travis.yml  CHANGES.rst  ISSUE_TEMPLATE  MANIFEST.in  PULL_REQUEST_TEMPLATE  README.md  README.rst  appveyor.yml  config.py  dev_update.sh  pip-requirements-docs  readthedocs.yml  rtd-environment.yml  setup.cfg  setup.py  test-environment.yml  tox.ini
cube_tools/: __init__.py  loaders.py  subset_ops.py  tools.py  utils.py
cube_tools/clients/: mos_client.py  spectra_client.py
cube_tools/core/: __init__.py  custom_registry.py  data_objects.py  fits_registry.py  utils.py
cube_tools/qt/: image_widget.py  mos_widget.py  pg_widget.py  spectra_widget.py  table_widget.py
cube_tools/test/: test_registry.py
cubeviz/: __init__.py  _internal_init.py  conftest.py  cubeviz.py  flux_equivalences.py  image_viewer.py  keyboard_shortcuts.py  layout.py  layout.ui  listener.py  main.py  messages.py  retired.py  setup_package.py  smoothing.py  smoothing_gui.py  startup.py  toolbar.py  toolbar_modes.py
cubeviz/controls/: flux_unit_registry.py  flux_units.py  flux_units_gui.py  overlay.py  registered_flux_units.yaml  slice.py  units.py  units_ui.py  wavelength.ui  wavelengths.py  wavelengths_ui.py
cubeviz/data_factories/: __init__.py  ifucube.py  ifucube_popup.ui  jwst.py  kmos.py  manga.py  setup_package.py
cubeviz/misc/: setup_package.py  update_cubeviz_test_env_pip
cubeviz/tests/: coveragerc  helpers.py  test_image_viewer.py  test_io.py  test_load_data.py  test_scripts.py  test_specviz_integration.py  test_specviz_interaction.py  test_stat_box.py  test_ui.py
cubeviz/tools/: arithmetic_gui.py  collapse.ui  collapse_cube.py  common.py  moment_maps.py  qt_spectral_cube.py  setup_package.py  smoothing.py  smoothing_gui.py  spectral_operations.py  temp.smoothing.py  unit_conversion.py  wavelength.ui  wavelengths_ui.py
cubeviz/utils/: __init__.py  contour.py  loader.py
docs/: analysis.rst  conf.py  developer_guide.rst  functionality.md  functionality.rst  image_viewers.rst  index.md  index.rst  installation.md  installation.rst  readingindata.md  readingindata.rst  shortcuts.rst  spectrum_viewer.rst
docs/cubeviz/: index.rst  installation.rst
docs/images/: CubeViz_labeled_layout.pptx  image_viewer_menu.pptx
glue/: _githash.py
glue_loader/: README.md  config.py  loaders.py  setup.py  subset_ops.py  tools.py  viewers.py
glue_loader/fits_generic/: loaders.py
notebooks/: Basic Arithmetic, etc..ipynb  Basic Arithmetic, etc_ureka.ipynb  Load_and_Collapse.ipynb  Load_and_Collapse_ureka.ipynb  continuum_subtract_MaNGA_ureka.ipynb  smoothing_analysis.ipynb  smoothing_recipe_ureka.ipynb
scripts/: create_cubeviz_test_env  dev_create_env.sh  update_cubeviz_test_env  update_cubeviz_test_env.sh  update_cubeviz_test_env_pip
smoothing/: continuum_subtract_MANGA.ipynb  smoothing_analysis.ipynb  smoothing_analysis_ureka.ipynb  smoothing_demo.ipynb  smoothing_recipe.ipynb
smoothing/.ipynb_checkpoints/: continuum_subtract_MANGA-checkpoint.ipynb  smoothing_analysis-checkpoint.ipynb  (+1 more)
(+27 files in other folders)
